[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hela-mem"
version = "0.1.0"
description = "Minimal HeLa-Mem LongMemEval experiment release"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "openai",
  "sentence-transformers",
  "torch",
]

[tool.setuptools]
packages = ["hela_mem"]
